Fix dockerfile for notebook Update some of the vector algebra in notebooks

--- a/notebooks/Genealogy and Vector Spaces.ipynb
+++ b/notebooks/Genealogy and Vector Spaces.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Vector spaces crop up in a large number of practicle applications. After a brief review of Vector Spaces, I'll explore defining a vector space with novel definitions of addition and multiplication. I'll next examine how this vector space has application in the field of genealogy. Finally, I'll explore some of the emergent properties that result in this application and an efficient implementation in Numpy.\n",
     "\n",
-    "Because of the application of this vector space to geneaology, I've named this the Avos Vector Space. Avos is latin for ancestory.\n",
+    "Because of the application of this vector space to geneaology, I've named this the Avos Vector Space (Avos is latin for ancestory).\n",
     "\n",
     "# Vector Spaces\n",
     "\n",
@@ -23,12 +23,12 @@
     "7. Distributivity of scalar multiplication with respect to vector addition: $a(\\vec{u} + \\vec{v}) = a\\vec{u} + a\\vec{v}$\n",
     "8. Distributivity of scalar multiplication with respect to field addition: $(a + b)\\vec{v} = a\\vec{v} + b\\vec{v}$\n",
     "\n",
-    "# Novel Operator Definition\n",
+    "# Defining the Avos Vector Space\n",
     "\n",
-    "I'll define operators (over integers) that satisfy the axioms for an abstract vector space. While this will appear aribtrary, I'll provide motivations for these defintions in applying this vector space to geneaology.\n",
+    "The Avos Vector Space is defined over integer, with the following definitions for scalar addition and scalar multiplication. While this will appear aribtrary, I'll provide motivations for these defintions in applying this vector space to geneaology. There are additional constraints placed on dimensions of the vector space and elements of a vector. \n",
     "\n",
-    "## Addition\n",
-    "I'll define scalar addition as:\n",
+    "## Scalar or Avos Addition\n",
+    "I'll define the scalar sum as:\n",
     "$$a + b = \\begin{cases}\n",
     "        b, & \\text{if }a==0,\\\\\n",
     "        a, & \\text{if }b==0,\\\\\n",
@@ -38,8 +38,8 @@
     "\n",
     "Observe that this definition of addition satisfies axioms 1 - 4. (Trivial)\n",
     "\n",
-    "## Multiplication\n",
-    "I'll define scalar multiplication as follows. Given $a * b$, represent $a$ and $b$ in two's complement binary notation. The product of $a$ and $b$ is then the result of taking the left most significat digit of $b$ and replacing it with $a$. So, for example:\n",
+    "## Scalar or Avos Multiplication\n",
+    "I'll define the scalar product as follows. Given $a * b$, represent $a$ and $b$ in two's complement binary notation. The product of $a$ and $b$ is then the result of taking the left most significat digit of $b$ and replacing it with $a$. So, for example:\n",
     "\n",
     "| $a$       | $b$      | $a_{2}$   | $b_{2}$   | $(a * b)_{2}$ | $(a * b)$ |\n",
     "| --------- | -------- | --------- | --------- | ------------- | --------- |\n",
@@ -58,14 +58,12 @@
     "\n",
     "While the following code example addresses a product that includes negative operands, I'll defer addressing that topic.\n",
     "\n",
-    "**Note:** What rules dictate operating over negative integers?\n",
-    "\n",
     "## Reference Implementation (Python)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +107,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avos Even and Avos Odd\n",
+    "The definition of even and odd integers in the avos space are slightly different. These are designated as Avos Even, $\\mathbb{E}_A$, or Avos Odd, $\\mathbb{O}_A$, and defined as:\n",
+    "\n",
+    "$$\\mathbb{E}_A = 2\\mathbb{Z}\\cup\\{1\\}$$ \n",
+    "$$\\mathbb{O}_A = (2\\mathbb{Z} + 1)\\setminus\\{1\\}\\cup\\{0\\}$$\n",
+    "\n",
+    "Note: $0$ is both $\\mathbb{E}_A$ and $\\mathbb{O}_A$.\n",
+    "\n",
+    "## Dimensional Constraints\n",
+    "For any space, a dimension in that space, the range of values in that dimension are constrained to be either $\\mathbb{E}_A$ or $\\mathbb{O}_A$.\n",
+    "\n",
+    "## Element Constraints\n",
+    "Dimensional constraints must be observed and for any given vector any non-zero integers may appear at most once in any element."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -117,9 +134,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
