--- a/notebooks/Avos Vector Space.ipynb
+++ b/notebooks/Avos Vector Space.ipynb
@@ -45,8 +45,8 @@
     "### Vector Addition for Impossible Cases\n",
     "There are cases that represent a temporal (I can't be my own Grandpa) or biological (offspring requires one parent of each gender) impossiblity. These cases are defined to result in $\\vec{0}$.\n",
     "\n",
-    "### Vector Addition $\\implies$ Offspring\n",
-    "This form of addition imposses the constraint: $\\alpha_{s_\\beta} == 0 \\land \\beta_{s_\\alpha} == 0 \\land \\alpha_s \\neq \\beta_s$. Arbitrarily selecting $\\vec{\\alpha}$ as the *red* vector and $\\vec{\\beta}$ as the *black* vector, vector addtion is defined as: $$\\vec{\\alpha} + \\vec{\\beta} = 2\\vec{\\alpha} + 3\\vec{\\beta}$$ where $+$ on the left hand side is vector addition and $+$ on the right hand side is element-wise scalar addtion.\n",
+    "### Vector Cross Product $\\implies$ Offspring\n",
+    "The cross product of two vectors results in a new vector (with an additional dimension, orthoganal to the basis vectors of the operands). With the constraints of $\\alpha_{s_\\beta} == 0 \\land \\beta_{s_\\alpha} == 0 \\land \\alpha_s \\neq \\beta_s$, the Avos cross product is defined as: $$\\vec{\\alpha} \\times \\vec{\\beta} = 2\\vec{\\alpha} + 3\\vec{\\beta}$$ with the orthoganal new dimension being $1$ if offspring is female and $-1$ if male.\n",
     "\n",
     "### Vector Addition $\\implies$ Add Relationship\n",
     "This form of addition imposses the constraint: $\\alpha_{s_\\beta} == 0 \\land \\beta_{s_\\alpha} == 0$. Arbitrarily selecting $\\vec{\\alpha}$ as the source of the relationship and $\\vec{\\beta}$ as the target of the relationship.\n",
@@ -84,9 +84,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
