Working on the basic math. What is avos product for x, y < -1?

--- a/notebooks/Avos Vector Space.ipynb
+++ b/notebooks/Avos Vector Space.ipynb
@@ -1,13 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from redblackgraph.reference.avos import avos_sum, avos_product\n",
+    "labels = [-1,0,1,2,3,4,5,6,7,8,9]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Avos Vector Spaces\n",
     "\n",
-    "In exploring Red Black Graphs, we see a number of linear algebra applications. I'll explore formalizing things just a bit to ensure that Red Black Graphs are an abstract vector space.\n",
+    "I'll expolre a novel extension of linear algebra that results in a vector space designated an Avos vector space. I'll outline the mathematical basis for this vector space as well as an interesting application in modeling the relationships that emerge from sexual reproduction.\n",
     "\n",
+    "## Vector Spaces\n",
     "Recall that the following axioms must be satisfied for any abstract vector space\n",
     "\n",
     "1. Associativity of Vector Addition: $\\vec{u} + (\\vec{v} + \\vec{w}) = (\\vec{u} + \\vec{v}) + \\vec{w}$\n",
@@ -19,22 +31,485 @@
     "7. Distributivity of scalar multiplication with respect to vector addition: $a(\\vec{u} + \\vec{v}) = a\\vec{u} + a\\vec{v}$\n",
     "8. Distributivity of scalar multiplication with respect to field addition: $(a + b)\\vec{v} = a\\vec{v} + b\\vec{v}$\n",
     "\n",
-    "I'll designate the vector space resulting from the exploration of representing family history utilizing the exploration of Red Black Graphs as the **Avos Vector Space**.\n",
+    "The **Avos Vector Space** is a vector space over integers and is a novel extension of linear algebra that redefines the addition and multiplication operators. \n",
     "\n",
-    "Let's begin by formally defining scalar addition and multiplication.\n",
-    "\n",
-    "## Scalar Addition\n",
-    "Recall from the previous exploration that I am using *non-zero minumum* in a similar fashion to addition. I'll extend that usage slightly in order to ensure that the requisite axioms are satisfied. Scalar Addition is defined as:\n",
+    "### Scalar Addition\n",
+    "Conceptually, scalar addition in an Avos vector space is a *non-zero minimum* operator. Formally, scalar addition is defined as:\n",
     "$$a + b = \\begin{cases}\n",
     "        b, & \\text{if }a==0,\\\\\n",
     "        a, & \\text{if }b==0,\\\\\n",
     "        0, & \\text{if }a==-b,\\\\\n",
     "        min(a, b), & \\text{otherwise}\n",
+    "\\end{cases}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-1</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>-1</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    -1   0   1   2   3   4   5   6   7   8   9\n",
+       "-1  -1  -1   0  -1  -1  -1  -1  -1  -1  -1  -1\n",
+       " 0  -1   0   1   2   3   4   5   6   7   8   9\n",
+       " 1   0   1   1   1   1   1   1   1   1   1   1\n",
+       " 2  -1   2   1   2   2   2   2   2   2   2   2\n",
+       " 3  -1   3   1   2   3   3   3   3   3   3   3\n",
+       " 4  -1   4   1   2   3   4   4   4   4   4   4\n",
+       " 5  -1   5   1   2   3   4   5   5   5   5   5\n",
+       " 6  -1   6   1   2   3   4   5   6   6   6   6\n",
+       " 7  -1   7   1   2   3   4   5   6   7   7   7\n",
+       " 8  -1   8   1   2   3   4   5   6   7   8   8\n",
+       " 9  -1   9   1   2   3   4   5   6   7   8   9"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(data=( [ [avos_sum(i, j) for j in range(-1, 10)] for i in range(-1, 10)] ), index=labels, columns=labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scalar Multiplication\n",
+    "For positive integers, the result of scalar multiplication is given by representing operating on the binary representation of each operand. The result is achieved by replacing the leftmost significant bit of the RHS operand with the value of the LHS operand (assuming infinate padding of zeros on the left overflow conditions are left as an engineering exercise). This will be referred to as the **avos scalar product** and symbolically represented by $\\lor$, e.g. $5 \\lor 2 = 10$. Note that while the avos scalar product is associative, it is not commutative.\n",
+    "\n",
+    "$$a \\lor b = \\begin{cases}\n",
+    "        a \\lor b, & \\text{if }a>1\\text{ and }b>1,\\\\\n",
+    "        -(a \\lor b), & \\text{if }a<-1\\text{ and }b<-1,\\\\\n",
+    "        0, & \\text{if }a=0\\text{ or }b=0,\\\\\n",
+    "        min(a, b), & \\text{otherwise}\n",
     "\\end{cases}$$\n",
     "\n",
-    "## Scalar Multiplication\n",
-    "Scalar multiplication is simply the **avos scalar product**. Note that while the **avos scalar product** is associative, it is not commutative.\n",
+    "For negative integers, the avos scalar product is defined as: $$-a \\lor -b = -(a \\lor b)$$\n",
     "\n",
+    "A definition of mixed sign operands will be deferred."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-1</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>-1</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>32</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>23</td>\n",
+       "      <td>40</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>27</td>\n",
+       "      <td>48</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>28</td>\n",
+       "      <td>29</td>\n",
+       "      <td>30</td>\n",
+       "      <td>31</td>\n",
+       "      <td>56</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>32</td>\n",
+       "      <td>33</td>\n",
+       "      <td>34</td>\n",
+       "      <td>35</td>\n",
+       "      <td>64</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>36</td>\n",
+       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39</td>\n",
+       "      <td>72</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    -1   0   1   2   3   4   5   6   7   8   9\n",
+       "-1  -1   0  -1   2   3   4   5   6   7   8   9\n",
+       " 0   0   0   0   0   0   0   0   0   0   0   0\n",
+       " 1  -1   0   1   2   3   4   5   6   7   8   9\n",
+       " 2   2   0   2   4   5   8   9  10  11  16  17\n",
+       " 3   3   0   3   6   7  12  13  14  15  24  25\n",
+       " 4   4   0   4   8   9  16  17  18  19  32  33\n",
+       " 5   5   0   5  10  11  20  21  22  23  40  41\n",
+       " 6   6   0   6  12  13  24  25  26  27  48  49\n",
+       " 7   7   0   7  14  15  28  29  30  31  56  57\n",
+       " 8   8   0   8  16  17  32  33  34  35  64  65\n",
+       " 9   9   0   9  18  19  36  37  38  39  72  73"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(data=( [ [avos_product(i, j) for j in range(-1, 10)] for i in range(-1, 10)] ), index=labels, columns=labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Vector Addition\n",
     "Before formally defining vector addition, consider the example motivating this. Each vector (assuming a row vector here) represents a person and their complete ancestry. As such it is easy to imagine that vector addition represents one of two cases:\n",
     "1. The resulting ancestry for the offspring of $\\vec{\\alpha}$ and $\\vec{\\beta}$\n",
