--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -1261,7 +1261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.82 ms ± 538 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.5 ms ± 360 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1280,7 +1280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "636 µs ± 167 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "686 µs ± 40.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1298,7 +1298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "789 µs ± 123 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "878 µs ± 33.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1592,7 +1592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.9 µs ± 1.73 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "28.2 µs ± 1 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1611,7 +1611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 µs ± 1.09 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "13.9 µs ± 367 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -1629,7 +1629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.13 µs ± 1.47 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "6.78 µs ± 167 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
