Tune the math just a bit (range of Avos number, Avos even/odd notation)

--- a/notebooks/Genealogy and Vector Spaces.ipynb
+++ b/notebooks/Genealogy and Vector Spaces.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Abstract\n",
     "\n",
-    "Vector spaces crop up in a large number of practicle applications. After a brief review of Vector Spaces, I'll explore defining a vector space with novel definitions of addition and multiplication. I'll next examine how this vector space has application in the field of genealogy. Finally, I'll explore some of the emergent properties that result in this application and an efficient implementation in Numpy.\n",
+    "Vector spaces crop up in a large number of practical applications. After a brief review of Vector Spaces, I'll explore defining a vector space with novel definitions of addition and multiplication. I'll next examine how this vector space has application in the field of genealogy. Finally, I'll explore some of the emergent properties that result in this application and an efficient implementation in Numpy.\n",
     "\n",
     "Because of the application of this vector space to geneaology, I've named this the Avos Vector Space (Avos is latin for ancestory).\n",
     "\n",
@@ -25,10 +25,10 @@
     "\n",
     "# Defining the Avos Vector Space\n",
     "\n",
-    "The Avos Vector Space is defined over integer, with the following definitions for scalar addition and scalar multiplication. While this will appear aribtrary, I'll provide motivations for these defintions in applying this vector space to geneaology. There are additional constraints placed on dimensions of the vector space and elements of a vector. \n",
+    "The Avos Vector Space is defined over $[-1,\\infty)$, with the following definitions for scalar addition and scalar multiplication. While this will appear aribtrary, I'll provide motivations for these defintions in applying this vector space to geneaology. There are additional constraints placed on dimensions of the vector space and elements of a vector. \n",
     "\n",
     "## Scalar or Avos Addition\n",
-    "I'll define the scalar sum as:\n",
+    "Define the scalar sum as:\n",
     "$$a + b = \\begin{cases}\n",
     "        b, & \\text{if }a==0,\\\\\n",
     "        a, & \\text{if }b==0,\\\\\n",
@@ -39,7 +39,7 @@
     "Observe that this definition of addition satisfies axioms 1 - 4. (Trivial)\n",
     "\n",
     "## Scalar or Avos Multiplication\n",
-    "I'll define the scalar product as follows. Given $a * b$, represent $a$ and $b$ in two's complement binary notation. The product of $a$ and $b$ is then the result of taking the left most significat digit of $b$ and replacing it with $a$. So, for example:\n",
+    "Define the scalar product as follows. Given $a * b$, represent $a$ and $b$ in two's complement binary notation. The product of $a$ and $b$ is then the result of taking the left most significat digit of $b$ and replacing it with $a$. So, for example:\n",
     "\n",
     "| $a$       | $b$      | $a_{2}$   | $b_{2}$   | $(a * b)_{2}$ | $(a * b)$ |\n",
     "| --------- | -------- | --------- | --------- | ------------- | --------- |\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
     "## Avos Even and Avos Odd\n",
     "The definition of even and odd integers in the avos space are slightly different. These are designated as Avos Even, $\\mathbb{E}_A$, or Avos Odd, $\\mathbb{O}_A$, and defined as:\n",
     "\n",
-    "$$\\mathbb{E}_A = 2\\mathbb{Z}\\cup\\{1\\}$$ \n",
-    "$$\\mathbb{O}_A = (2\\mathbb{Z} + 1)\\setminus\\{1\\}\\cup\\{0\\}$$\n",
+    "$$\\mathbb{E}_A = 2\\mathbb{N}^*\\cup\\{0, 1\\}$$ \n",
+    "$$\\mathbb{O}_A = (2\\mathbb{N}^* + 1)\\cup\\{0, -1\\}$$\n",
     "\n",
     "Note: $0$ is both $\\mathbb{E}_A$ and $\\mathbb{O}_A$.\n",
     "\n",
@@ -134,22 +134,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
