remove @maxval@ from computations (parallelism between c and c++ impl)

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -162,7 +162,10 @@
     "| father                 | paternal grandfather  | 10        | 100      | 1000      |\n",
     "| maternal grandmother   | paternal grandfather  | 111       | 100      | 11100     |\n",
     "\n",
-    "While perhaps not obvious, upon examination of the binary representation, the avos product simply replaces the most significant bit of $r(\\mathscr{v},\\mathscr{w})$ with the value of $r(\\mathscr{u},\\mathscr{v})$.\n",
+    "While perhaps not obvious, upon examination of the binary representation, the avos product simply replaces the most significant bit of $r(\\mathscr{v},\\mathscr{w})$ with the value of $r(\\mathscr{u},\\mathscr{v})$. A few convensions are required:\n",
+    "1. $-1 = -1 \\star 1$\n",
+    "2. $-1 = 1 \\star -1$\n",
+    "3. For all other cases, $-1$ is treated as $1$\n",
     "\n",
     "### Avos Sum\n",
     "It is natural to pair multiplication with addition for linear algebra operations (matrix multiplication, matrix distance product, etc.) a min-avos product pairing conforms to the definition of Red Black Graphs with a slight modification required for implementation in a typical RAM computer, namely $-1=2^\\mathscr{w}-1$, where $\\mathscr{w}$ is the word size of the numeric type. As, aside from $-1$, the range of $r(\\mathscr{u},\\mathscr{v})$ is $\\mathbb{N}$, it is natural to utilize unsigned numeric types (in a strongly typed language). Additionally, I use the convention $min(0)=\\infty$. The min function needs to be aware of both these conventions. I'll define this modification of typical min as the *avos sum* and designate it using $\\dagger$. \n",
@@ -172,12 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/reference/avos.py\n",
-    "from redblackgraph.reference.util import compute_sign, MSB\n",
+    "from redblackgraph.reference.util import MSB\n",
     "\n",
     "def avos_sum(x: int, y: int) -> int:\n",
     "    '''\n",
@@ -202,15 +205,24 @@
     "    :return: avos product\n",
     "    '''\n",
     "\n",
-    "    sign = compute_sign(x, y)\n",
-    "    x, y = abs(x), abs(y)\n",
-    "\n",
+    "    # negative values are invalid (aside from -1)\n",
+    "    if x < -1 or y < -1:\n",
+    "        raise ValueError(f\"Invalid input. Negative values (aside from -1) are not allowed. x: {x}, y:{y}\")\n",
     "    # The zero property of the avos product\n",
     "    if x == 0 or y == 0:\n",
     "        return 0\n",
+    "    # Special case -1 * 1 or -1 * -1\n",
+    "    if x == -1:\n",
+    "        if y == 1:\n",
+    "            return -1\n",
+    "        x = 1\n",
+    "    if y == -1:\n",
+    "        if x == 1:\n",
+    "            return -1\n",
+    "        y = 1\n",
     "\n",
     "    bit_position = MSB(y)\n",
-    "    return sign * ((y & (2 ** bit_position - 1)) | (x << bit_position))\n"
+    "    return ((y & (2 ** bit_position - 1)) | (x << bit_position))\n"
    ]
   },
   {
